--- a/package.json
+++ b/package.json
@@ -2,19 +2,21 @@
   "name": "agroconnect-frontend",
   "version": "1.0.0",
   "private": true,
-  "dependencies": {
-    "jwt-decode": "^4.0.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^7.9.5",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^5.1.0"
-  },
+  "description": "AgroConnect frontend built with React",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+"dependencies": {
+  "react-scripts": "^5.0.1",
+  "react": "^18.0.0",
+  "react-dom": "^18.0.0",
+  "react-router-dom": "^6.0.0"
+  },
+  "devDependencies": {
+    "eslint": "^8.57.0"
   },
   "browserslist": {
     "production": [
@@ -27,9 +29,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "@testing-library/jest-dom": "^6.9.1",
-    "@testing-library/react": "^16.3.0"
   }
 }
