--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
-"dependencies": {
-  "react-scripts": "^5.0.1",
-  "react": "^18.0.0",
-  "react-dom": "^18.0.0",
-  "react-router-dom": "^6.0.0"
+  "dependencies": {
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
+    "react-router-dom": "^6.0.0",
+    "react-scripts": "^5.0.1",
+    "web-vitals": "^5.1.0"
   },
   "devDependencies": {
     "eslint": "^8.57.0"
