--- a/netlify.toml
+++ b/netlify.toml
@@ -2,3 +2,12 @@
   base = "agroconnect-frontend"
   command = "npm run build"
   publish = "build"
+
+[build.environment]
+  NODE_VERSION = "18"
+
+[[redirects]]
+  from = "/*"
+  to = "/index.html"
+  status = 200
+
