--- a/workflows/deploy-netlify.yml
+++ b/workflows/deploy-netlify.yml
@@ -3,6 +3,7 @@ name: Deploy Frontend to Netlify
 on:
   push:
     branches: [ main ]
+  workflow_dispatch:   # 👈 allows manual trigger
 
 jobs:
   build-deploy:
@@ -18,6 +19,24 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '18'
+
+      - name: Debug secrets
+        run: |
+          if [ -z "${NETLIFY_AUTH_TOKEN}" ]; then
+            echo "NETLIFY_AUTH_TOKEN is NOT set"; exit 1
+          else
+            echo "NETLIFY_AUTH_TOKEN is set ✅"
+          fi
+          if [ -z "${NETLIFY_SITE_ID}" ]; then
+            echo "NETLIFY_SITE_ID is NOT set"; exit 1
+          else
+            echo "NETLIFY_SITE_ID is set ✅"
+          fi
+          if [ -z "${REACT_APP_API_URL}" ]; then
+            echo "REACT_APP_API_URL is NOT set"; exit 1
+          else
+            echo "REACT_APP_API_URL is set ✅"
+          fi
 
       - name: Install dependencies and build
         run: |
