Add static.json for client-side routing on Render

--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
+REACT_APP_API_URL=https://mern-final-project-g7hp.onrender.com
 REACT_APP_API_URL=https://mern-final-project-oroyinloye.onrender.com
-REACT_APP_API_URL=http://localhost:5000
+REACT_APP_API_URL=http://172.19.221.55:3000
+REACT_APP_GOOGLE_MAPS_API_KEY=AIzaSyDqX4YlY6b1b3KXJzU5b3r3QZ3Z3QZ3QZ3Q
