--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
     "eject": "react-scripts eject"
   },
   "dependencies": {
-"react-router-dom": "^6.28.0",
-"react": "^18.2.0",
-"react-dom": "^18.2.0",
-"react-scripts": "5.0.1",
-"logrocket": "^10.1.0"
+    "logrocket": "^10.1.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.30.2",
+    "react-scripts": "5.0.1"
   },
   "eslintConfig": {
     "extends": [
